Removed NAME tag from cluster/config files

--- a/cloudflow/cluster/configs/RPS/ioos.amd.config
+++ b/cloudflow/cluster/configs/RPS/ioos.amd.config
@@ -5,8 +5,7 @@
 "nodeCount" : 2,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "nosofs-fcst" }
+                { "Key": "Project", "Value": "IOOS-cloud-sandbox" }
               ],
 "image_id"  : "ami-01c437ac2b5beddda",
 "key_name"  : "ioos-sandbox",
