--- a/cloudflow/cluster/configs/RPS/test.liveocean.cfg
+++ b/cloudflow/cluster/configs/RPS/test.liveocean.cfg
@@ -7,7 +7,7 @@
                 { "Key": "Name", "Value": "forPR-Cloud-Sandbox-node" },
                 { "Key": "Project", "Value": "IOOS-cloud-sandbox" }
               ],
-"image_id"  : "ami-049a762c1343a9d98"'
+"image_id"  : "ami-049a762c1343a9d98",
 "key_name"  : "ioos-sandbox",
 "sg_ids"    : [ "sg-0feaeb0d419b7ddda",
   "sg-046f683021585a25f",
