--- a/cloudflow/cluster/configs/post.config
+++ b/cloudflow/cluster/configs/post.config
@@ -5,8 +5,7 @@
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "nosofs plotting" }
+                { "Key": "Project", "Value": "IOOS-cloud-sandbox" }
               ],
 "image_id"  : "ami-052f3e9220b9961dc",
 "key_name"  : "patrick-ioos-cloud-sandbox",
