--- a/cloudflow/cluster/configs/RPS/nosofs.config
+++ b/cloudflow/cluster/configs/RPS/nosofs.config
@@ -5,8 +5,7 @@
 "nodeCount" : 1,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "nosofs-fcst" }
+                { "Key": "Project", "Value": "IOOS-cloud-sandbox" }
               ],
 "image_id"  : "ami-076b2467dfd17d05e",
 "key_name"  : "ioos-sandbox",
