--- a/cloudflow/cluster/configs/RPS/ioos.liveocean.cfg
+++ b/cloudflow/cluster/configs/RPS/ioos.liveocean.cfg
@@ -2,11 +2,10 @@
 "platform"  : "AWS",
 "region"    : "us-east-2",
 "nodeType"  : "hpc6a.48xlarge",
-"nodeCount" : 2,
+"nodeCount" : 8,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "NAME", "Value": "liveocean-fcst" }
+                { "Key": "Project", "Value": "IOOS-cloud-sandbox" }
               ],
 "image_id"  : "ami-07d0aa6a6ac23d33a",
 "key_name"  : "ioos-sandbox",
