--- a/cloudflow/cluster/configs/RPS/ioos.nosofs.cfg
+++ b/cloudflow/cluster/configs/RPS/ioos.nosofs.cfg
@@ -5,7 +5,7 @@
 "nodeCount" : 8,
 "tags"      : [ 
                 { "Key": "Name", "Value": "IOOS-cloud-sandbox" },
-                { "Key": "Project", "Value": "IOOS-cloud-sandbox" }
+                { "Key": "Project", "Value": "IOOS-cloud-sandbox" },
               ],
 "image_id"  : "ami-07d0aa6a6ac23d33a",
 "key_name"  : "ioos-sandbox",
