LiveOcean tested on hpc7a. Starting FSx re-integration ...

--- a/cloudflow/test.cluster.config
+++ b/cloudflow/test.cluster.config
@@ -2,9 +2,9 @@
 "platform"  : "AWS",
 "region"    : "us-east-2",
 "nodeType"  : "hpc7a.48xlarge",
-"nodeCount" : 3,
+"nodeCount" : 4,
 "tags"      : [ 
-                { "Key": "Name", "Value": "short-hsofs-test-node" },
+                { "Key": "Name", "Value": "short-liveocean-test" },
                 { "Key": "Project", "Value": "IOOS-Cloud-Sandbox" }
               ],
 "image_id"  : "ami-049a762c1343a9d98",
