Include NOS suite of models to Cloud-Sandbox job configuration templates for users and rename OWP model suite to reflect template naming convention

--- a/cloudflow/job/jobs/dflowfm.template
+++ b/cloudflow/job/jobs/dflowfm.template
@@ -1,5 +1,5 @@
 {
-  "JOBTYPE"   : "dflowfmhindcast",
+  "JOBTYPE"   : "dflowfm_template",
   "OFS"       : "dflowfm",
   "EXEC"      : "/save/ec2-user/OWP/DFlow/delft3d/install/bin/dflowfm",
   "DFLOW_LIB" : "/save/ec2-user/OWP/DFlow/delft3d/install/lib",
