--- a/cloudflow/job/jobs/nwmv3_wrf_hydro.template
+++ b/cloudflow/job/jobs/nwmv3_wrf_hydro.template
@@ -1,6 +1,6 @@
 {
-  "JOBTYPE"   : "nwmv3hindcast",
-  "OFS"       : "nwmv3",
+  "JOBTYPE"   : "nwmv3_wrf_hydro_template",
+  "OFS"       : "nwmv3_wrf_hydro",
   "EXEC"      : "/save/ec2-user/OWP/chps-wrf-hydro/trunk/NWC/nwm.vX.X/sorc/nwm.fd/build/Run/wrf_hydro_NoahMP.exe",
   "MODEL_DIR" : "/save/ec2-user/OWP/NWM_v3_retrospective_run"
 }
