hsofs test success

--- a/cloudflow/test.cluster.config
+++ b/cloudflow/test.cluster.config
@@ -4,7 +4,7 @@
 "nodeType"  : "hpc7a.96xlarge",
 "nodeCount" : 2,
 "tags"      : [ 
-                { "Key": "Name", "Value": "short-liveocean-test" },
+                { "Key": "Name", "Value": "hsofs-short" },
                 { "Key": "Project", "Value": "IOOS-Cloud-Sandbox" }
               ],
 "image_id"  : "ami-0e42e8305f2897f6b",
