--- a/cloudflow/test.cluster.config
+++ b/cloudflow/test.cluster.config
@@ -2,12 +2,12 @@
 "platform"  : "AWS",
 "region"    : "us-east-2",
 "nodeType"  : "hpc7a.96xlarge",
-"nodeCount" : 4,
+"nodeCount" : 6,
 "tags"      : [ 
-                { "Key": "Name", "Value": "hsofs-short" },
+                { "Key": "Name", "Value": "liveocean-short" },
                 { "Key": "Project", "Value": "IOOS-Cloud-Sandbox" }
               ],
-"image_id"  : "ami-00e94c6faef0734eb",
+"image_id"  : "ami-04a9307a742384eb1",
 "key_name"  : "ioos-sandbox",
 "sg_ids"    : [ "sg-0feaeb0d419b7ddda",
   "sg-046f683021585a25f",
