adcirc hsofs built and tested

--- a/cloudflow/test.cluster.config
+++ b/cloudflow/test.cluster.config
@@ -2,9 +2,9 @@
 "platform"  : "AWS",
 "region"    : "us-east-2",
 "nodeType"  : "hpc7a.96xlarge",
-"nodeCount" : 6,
+"nodeCount" : 2,
 "tags"      : [ 
-                { "Key": "Name", "Value": "liveocean-short" },
+                { "Key": "Name", "Value": "adcirc-hsofs-short" },
                 { "Key": "Project", "Value": "IOOS-Cloud-Sandbox" }
               ],
 "image_id"  : "ami-04a9307a742384eb1",
