necofs cold run

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ cloudflow/build/
 cloudflow/cluster/SAVE.AWSCluster.py
 scripts/system/ioos.sb.users
 models/necofs/libs/libjulian.a
+models/utils/makedepf90/
