--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ cloudflow/cluster/SAVE.AWSCluster.py
 scripts/system/ioos.sb.users
 models/necofs/libs/libjulian.a
 models/utils/makedepf90/
+*.log
+*.out
+out.*
