--- a/cloudflow/job/templates/secofs_hotstart.param.nml.in
+++ b/cloudflow/job/templates/secofs_hotstart.param.nml.in
@@ -16,8 +16,9 @@
   ibc = 0 !Baroclinic option
   ibtp = 0 
 
-  rnday = __RNDAY__ !total run time in days
-  dt = 120. !Time step in sec
+  !OG rnday = 396. !total run time in days
+  rnday = __RNDAY__
+  dt = 120.
 
 ! Grid for WWM (USE_WWM)
   msc2 = 24     !same as msc in .nml ... for consitency check between SCHISM and WWM
@@ -47,10 +48,11 @@
   ipre2 = 0
 
 ! Starting time
-  start_year = 2017 !int
-  start_month = 12 !int
-  start_day = 1 !int
-  start_hour = 0 !double
+  start_year = __START_YEAR__
+  start_month = __START_MONTH__
+  start_day = __START_DAY__
+  start_hour = __START_HOUR__
+
   utc_start = 0 !double
 
 !-----------------------------------------------------------------------
@@ -60,10 +62,12 @@
   ics = 2 !Coordinate option
 
 !-----------------------------------------------------------------------
-! Hotstart option. 0: cold start; 1: hotstart with time reset to 0; 2: 
-! continue from the step in hotstart.nc
+! Hotstart option. 0: cold start; 
+!                  1: hotstart with time reset to 0;
+!                  2: continue from the step in hotstart.nc
 !-----------------------------------------------------------------------
   ihot = 1
+  ! ihot = 0
 
 !-----------------------------------------------------------------------
 ! Equation of State type used
@@ -72,7 +76,7 @@
 !-----------------------------------------------------------------------
   ieos_type = 0
   ieos_pres = 0 !used only if ieos_type=0. 0: without pressure effects 
-  eos_a = -0.1 !needed if ieos_type=1; should be <=0 
+  eos_a = -0.1  !needed if ieos_type=1; should be <=0 
   eos_b = 1001. !needed if ieos_type=1
 
 !-----------------------------------------------------------------------
@@ -511,7 +515,7 @@
   vnh2 = 500 !vertical nudging depth 2 (must >vnh1)
   vnf2 = 0. !vertical relax
 
-  step_nu_tr = 86400. !time step [sec] in all [MOD]_nu.nc (for inu_[MOD]=2)
+  step_nu_tr = 86400. !time step [sec] in all [MOD]_nu.nc (for inu_[MOD]=2)  ! 86400 == one day
 
 !-----------------------------------------------------------------------
 ! Cut-off depth for cubic spline interpolation near bottom when computing horizontal gradients
@@ -650,9 +654,17 @@
 ! Output section - all optional. Values shown are default unless otherwise stated.
 !-----------------------------------------------------------------------
 ! Option for hotstart outputs
+! nhot = 1: output *_hotstart every 'hotout_write' steps
+! nohot_write = must be a multiple of ihfskip if nhot=1
+! 1 day == 86400 seconds
 !-----------------------------------------------------------------------
-  nhot = 1 !1: output *_hotstart every 'hotout_write' steps
-  nhot_write = 2160 !must be a multiple of ihfskip if nhot=1
+  nhot = 1
+  nhot_write = __NHOT_WRITE__
+  ! nhot_write = 720          ! 1 day at 120second dt
+  ! nhot_write = 720          ! 1 day at 120second dt
+  ! nhot_write = 1440         ! 2 day at 120second dt
+  ! nhot_write = 2160       ! 3 days @ 120s dt
+  !OG  nhot_write = 2160    ! 3 days @ 120s dt
 
 !-----------------------------------------------------------------------
 ! Station output option. If iout_sta/=0, need output skip (nspool_sta) and
