NECOFS hindcast setup, standardize SAVEDIR/SAVE/WRKDIR to SAVEDIR

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ cloudflow/build/
 .nfs*
 cloudflow/cluster/SAVE.AWSCluster.py
 scripts/system/ioos.sb.users
-models/necofs/libs/libjulian.a
+models/necofs/libs/*
 models/utils/makedepf90/
 *.log
 *.out
