Update the default SCHISM job configuration file to include the new options NUM_TRIES and JOB_DELAY to utilize the new cloudflow method for waiting to obtain AWS resources based on the user patience to obtain them

--- a/cloudflow/job/jobs/schism.template
+++ b/cloudflow/job/jobs/schism.template
@@ -1,7 +1,9 @@
 {
   "JOBTYPE"   : "schism_template",
   "OFS"       : "schism",
-  "EXEC"      : "/save/ec2-user/OWP/schism/build/bin/pschism_DEBUG_DEBUG_BLD_STANDALONE_SH_MEM_COMM_TVD-VL",
+  "EXEC"      : "/save/ec2-user/OWP/schism_jerome_hpc7a/build/bin/pschism_TVD-VL",
   "MODEL_DIR" : "/save/ec2-user/OWP/laura",
+  "JOB_DELAY" : "300",
+  "NUM_TRIES" : "10",
   "NSCRIBES"  : "2"
 }
